infra/k8s/client_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-srv
  template:
    metadata:
      labels:
        app: client-srv
    spec:
      containers:
        - name: client-srv
          image: client_mod:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: app-secret
