infra/k8s/event_bus_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus-srv
  template:
    metadata:
      labels:
        app: event-bus-srv
    spec:
      containers:
        - name: event-bus-container
          image: event_mod:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4005
