infra/k8s/moderation_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-srv
  template:
    metadata:
      labels:
        app: moderation-srv
    spec:
      containers:
        - name: moderation-container
          image: moderation:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
