infra/k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-srv
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
