infra/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments-srv
  ports:
    - protocol: TCP
      port: 4001
