infra/k8s/comments_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-srv
  labels:
    app: comments-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-srv
  template:
    metadata:
      name: comments-srv
      labels:
        app: comments-srv
    spec:
      containers:
        - name: cicd-comment-container
          image: registry.gitlab.com/manos972/tp_fil_rouge/comments:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
      imagePullSecrets:
        - name: app-secret
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments-srv
  ports:
    - protocol: TCP
      port: 4001
