infra/k8s/moderation-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation-srv
  ports:
    - protocol: TCP
      port: 4003
