infra/k8s/post-clusterip-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-clusterip-srv
  labels:
    app: posts-clusterip-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-clusterip-srv
  template:
    metadata:
      name: posts-clusterip-srv
      labels:
        app: posts-clusterip-srv
    spec:
      containers:
        - name: cicd-posts-clusterip-srv-container
          image: registry.gitlab.com/manos972/tp_fil_rouge/posts:v1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: app-secret
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts-clusterip-srv
  ports:
    - protocol: TCP
      port: 4000
