infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query-srv
  ports:
    - protocol: TCP
      port: 4002
