infra/k8s/query_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-srv
  template:
    metadata:
      labels:
        app: query-srv
    spec:
      containers:
        - name: cicd-querycontainer
          image: registry.gitlab.com/manos972/tp_fil_rouge/query:v1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
      imagePullSecrets:
        - name: app-secret

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query-srv
  ports:
    - protocol: TCP
      port: 4002
