infra/k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: "ws-svc"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - pathType: ImplementationSpecific
            path: /posts/?(.*)/comments
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
